# address-intelligence-llm

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  notebook_manifest.json
notebooks/: 02_rag_pipeline_final_uv.ipynb  03_multi_agent_workflow_uv.ipynb  04_qlora_finetuning_uv.ipynb  05_evaluation_bigquery_logging_uv.ipynb
scripts/: bootstrap_repo.py  notebook_inventory.py
src/address_intelligence/: __init__.py  agents.py  bigquery_io.py  config.py  evaluation.py  finetune.py  prompts.py  retrieval.py  utils.py
